--- a/index.html
+++ b/index.html
@@ -37,6 +37,6 @@
               <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script></li>
         </main>
       </div>
-      <script src="botao.js"></script>
+      <script src="scripts.js"></script>
 </body>
 </html>
